hphp/hack/test/typecheck/trait_matching1.php.legacy_decl.exp
File "trait_matching1.php", line 25, characters 13-18:
The property `x` has the wrong type (Typing[4341])
File "trait_matching1.php", line 25, characters 13-18:
Typing error
File "trait_matching1.php", line 13, characters 14-16:
Expected `int`
File "trait_matching1.php", line 25, characters 13-18:
But got `string`
File "trait_matching1.php", line 25, characters 13-18:
The property `x` has the wrong type (Typing[4341])
File "trait_matching1.php", line 25, characters 13-18:
Typing error
File "trait_matching1.php", line 25, characters 13-18:
Expected `string`
File "trait_matching1.php", line 13, characters 13-16:
But got `?int`
